--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     </style>
     <script>
       $(document).ready(function () {
-        listing();
+        //listing();
         fetch("http://spartacodingclub.shop/sparta_api/weather/tokyo")
           .then((res) => res.json())
           .then((data) => {
