--- a/index.html
+++ b/index.html
@@ -1,273 +1,185 @@
-<!DOCTYPE html>
+<!Doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
 
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 
     <title>スパルタペディア</title>
 
-    <link
-      href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
 
     <style>
-      * {
-        font-family: "Gowun Dodum", sans-serif;
-      }
+        * {
+            font-family: 'Gowun Dodum', sans-serif;
+        }
 
-      .mytitle {
-        width: 100%;
-        height: 250px;
+        .mytitle {
+            width: 100%;
+            height: 250px;
 
-        background-image: linear-gradient(
-            0deg,
-            rgba(0, 0, 0, 0.5),
-            rgba(0, 0, 0, 0.5)
-          ),
-          url("https://movie-phinf.pstatic.net/20210715_95/1626338192428gTnJl_JPEG/movie_image.jpg");
-        background-position: center;
-        background-size: cover;
+            background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://movie-phinf.pstatic.net/20210715_95/1626338192428gTnJl_JPEG/movie_image.jpg');
+            background-position: center;
+            background-size: cover;
 
-        color: white;
+            color: white;
 
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-      }
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
 
-      .mytitle > button {
-        width: 200px;
-        height: 50px;
+        .mytitle>button {
+            width: 200px;
+            height: 50px;
 
-        background-color: transparent;
-        color: white;
+            background-color: transparent;
+            color: white;
 
-        border-radius: 50px;
-        border: 1px solid white;
+            border-radius: 50px;
+            border: 1px solid white;
 
-        margin-top: 10px;
-      }
+            margin-top: 10px;
+        }
 
-      .mytitle > button:hover {
-        border: 2px solid white;
-      }
+        .mytitle>button:hover {
+            border: 2px solid white;
+        }
 
-      .mycomment {
-        color: gray;
-      }
+        .mycomment {
+            color: gray;
+        }
 
-      .mycards {
-        margin: 20px auto 0px auto;
-        width: 95%;
-        max-width: 1200px;
-      }
+        .mycards {
+            margin: 20px auto 0px auto;
+            width: 95%;
+            max-width: 1200px;
+        }
 
-      .mypost {
-        width: 95%;
-        max-width: 500px;
-        margin: 20px auto 0px auto;
-        padding: 20px;
-        box-shadow: 0px 0px 3px 0px gray;
+        .mypost {
+            width: 95%;
+            max-width: 500px;
+            margin: 20px auto 0px auto;
+            padding: 20px;
+            box-shadow: 0px 0px 3px 0px gray;
+        }
 
-        display: none;
-      }
+        .mybtns {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
 
-      .mybtns {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
+            margin-top: 20px;
+        }
 
-        margin-top: 20px;
-      }
-
-      .mybtns > button {
-        margin-right: 10px;
-      }
+        .mybtns>button {
+            margin-right: 10px;
+        }
     </style>
     <script>
-      $(document).ready(function () {
-        listing();
-        fetch("http://spartacodingclub.shop/sparta_api/weather/tokyo")
-          .then((res) => res.json())
-          .then((data) => {
-            console.log(data);
-            let number = data['temp']
-            $('#temp').text(number)
-          });
-      });
-
-      function listing() {
-        $("#cards-box").empty();
-        fetch("http://spartacodingclub.shop/web/jp/api/movie")
-          .then((response) => response.json())
-          .then((data) => {
-            // console.log(data)
-            let rows = data["movies"];
-            rows.forEach((a) => {
-              // console.log(a)
-              let title = a["title"];
-              let image = a["image "];
-              let desc = a["desc"];
-              let star = a["star"];
-              let comment = a["comment"];
-              let star_image = "⭐".repeat(star);
-              let temp_html = `<div class="col">
-                              <div class="card h-100">
-                                <img src="${image}"
-                                  class="card-img-top">
-                                <div class="card-body">
-                                  <h5 class="card-title">${title}</h5>
-                                  <p class="card-text">${desc}</p>
-                                  <p>${star_image}</p>
-                                  <p class="mycomment">${comment}</p>
-                                </div>
-                              </div>
-                            </div>`;
-
-              $("#cards-box").append(temp_html);
-            });
-          })
-          .catch(console.error);
-      }
-
-      function open_box() {
-        $("#post-box").show();
-      }
-      function close_box() {
-        $("#post-box").hide();
-      }
+        $(document).ready(function () {
+            fetch("http://spartacodingclub.shop/sparta_api/weather/tokyo").then(res => res.json()).then(data => {
+                // console.log(data)
+                let number = data['temp']
+                $('#temp').text(number)
+            })
+        })
     </script>
-  </head>
+</head>
 
-  <body>
+<body>
     <div class="mytitle">
-      <h1>人生最高の映画</h1>
-      <div>今の気温 : <span id="temp">20</span>度</div>
-      <button onclick="open_box()">映画記録</button>
+        <h1>人生最高の映画</h1>
+        <div>今の気温 : <span id="temp">20</span>度</div>
+        <button onclick="hey()">映画記録</button>
     </div>
-    <div class="mypost" id="post-box">
-      <div class="form-floating mb-3">
-        <input
-          type="email"
-          class="form-control"
-          id="floatingInput"
-          placeholder="name@example.com"
-        />
-        <label for="floatingInput">映画URL</label>
-      </div>
-      <div class="input-group mb-3">
-        <label class="input-group-text" for="inputGroupSelect01">採点</label>
-        <select class="form-select" id="inputGroupSelect01">
-          <option selected>-- 選択 --</option>
-          <option value="1">⭐</option>
-          <option value="2">⭐⭐</option>
-          <option value="3">⭐⭐⭐</option>
-          <option value="4">⭐⭐⭐⭐</option>
-          <option value="5">⭐⭐⭐⭐⭐</option>
-        </select>
-      </div>
-      <div class="form-floating">
-        <textarea
-          class="form-control"
-          placeholder="Leave a comment here"
-          id="floatingTextarea2"
-          style="height: 100px"
-        ></textarea>
-        <label for="floatingTextarea2">コメント</label>
-      </div>
-      <div class="mybtns">
-        <button type="button" class="btn btn-dark">記録</button>
-        <button
-          type="button"
-          class="btn btn-outline-dark"
-          onclick="close_box()"
-        >
-          閉じる
-        </button>
-      </div>
+    <div class="mypost">
+        <div class="form-floating mb-3">
+            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+            <label for="floatingInput">映画URL</label>
+        </div>
+        <div class="input-group mb-3">
+            <label class="input-group-text" for="inputGroupSelect01">採点</label>
+            <select class="form-select" id="inputGroupSelect01">
+                <option selected>-- 選択 --</option>
+                <option value="1">⭐</option>
+                <option value="2">⭐⭐</option>
+                <option value="3">⭐⭐⭐</option>
+                <option value="4">⭐⭐⭐⭐</option>
+                <option value="5">⭐⭐⭐⭐⭐</option>
+            </select>
+        </div>
+        <div class="form-floating">
+            <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"
+                style="height: 100px"></textarea>
+            <label for="floatingTextarea2">コメント</label>
+        </div>
+        <div class="mybtns">
+            <button type="button" class="btn btn-dark">記録</button>
+            <button type="button" class="btn btn-outline-dark">閉じる</button>
+        </div>
     </div>
     <div class="mycards">
-      <div class="row row-cols-1 row-cols-md-4 g-4" id="cards-box">
-        <div class="col">
-          <div class="card h-100">
-            <img
-              src="https://eiga.k-img.com/images/movie/97490/photo/6bfe14f287a8a19b/320.jpg?1670141541"
-              class="card-img-top"
-              alt="..."
-            />
-            <div class="card-body">
-              <h5 class="card-title">映画のタイトルが入ります</h5>
-              <p class="card-text">ここに映画の説明が入ります。</p>
-              <p>⭐⭐⭐</p>
-              <p class="mycomment">自分の一行レビューを書きます</p>
+        <div class="row row-cols-1 row-cols-md-4 g-4">
+            <div class="col">
+                <div class="card h-100">
+                    <img src="https://eiga.k-img.com/images/movie/97490/photo/6bfe14f287a8a19b/320.jpg?1670141541"
+                        class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">映画のタイトルが入ります</h5>
+                        <p class="card-text">ここに映画の説明が入ります。</p>
+                        <p>⭐⭐⭐</p>
+                        <p class="mycomment">自分の一行レビューを書きます</p>
+                    </div>
+                </div>
             </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card h-100">
-            <img
-              src="https://eiga.k-img.com/images/movie/97490/photo/6bfe14f287a8a19b/320.jpg?1670141541"
-              class="card-img-top"
-              alt="..."
-            />
-            <div class="card-body">
-              <h5 class="card-title">映画のタイトルが入ります</h5>
-              <p class="card-text">ここに映画の説明が入ります。</p>
-              <p>⭐⭐⭐</p>
-              <p class="mycomment">自分の一行レビューを書きます</p>
+            <div class="col">
+                <div class="card h-100">
+                    <img src="https://eiga.k-img.com/images/movie/97490/photo/6bfe14f287a8a19b/320.jpg?1670141541"
+                        class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">映画のタイトルが入ります</h5>
+                        <p class="card-text">ここに映画の説明が入ります。</p>
+                        <p>⭐⭐⭐</p>
+                        <p class="mycomment">自分の一行レビューを書きます</p>
+                    </div>
+                </div>
             </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card h-100">
-            <img
-              src="https://eiga.k-img.com/images/movie/97490/photo/6bfe14f287a8a19b/320.jpg?1670141541"
-              class="card-img-top"
-              alt="..."
-            />
-            <div class="card-body">
-              <h5 class="card-title">映画のタイトルが入ります</h5>
-              <p class="card-text">ここに映画の説明が入ります。</p>
-              <p>⭐⭐⭐</p>
-              <p class="mycomment">自分の一行レビューを書きます</p>
+            <div class="col">
+                <div class="card h-100">
+                    <img src="https://eiga.k-img.com/images/movie/97490/photo/6bfe14f287a8a19b/320.jpg?1670141541"
+                        class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">映画のタイトルが入ります</h5>
+                        <p class="card-text">ここに映画の説明が入ります。</p>
+                        <p>⭐⭐⭐</p>
+                        <p class="mycomment">自分の一行レビューを書きます</p>
+                    </div>
+                </div>
             </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card h-100">
-            <img
-              src="https://eiga.k-img.com/images/movie/97490/photo/6bfe14f287a8a19b/320.jpg?1670141541"
-              class="card-img-top"
-              alt="..."
-            />
-            <div class="card-body">
-              <h5 class="card-title">映画のタイトルが入ります</h5>
-              <p class="card-text">ここに映画の説明が入ります。</p>
-              <p>⭐⭐⭐</p>
-              <p class="mycomment">自分の一行レビューを書きます</p>
+            <div class="col">
+                <div class="card h-100">
+                    <img src="https://eiga.k-img.com/images/movie/97490/photo/6bfe14f287a8a19b/320.jpg?1670141541"
+                        class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">映画のタイトルが入ります</h5>
+                        <p class="card-text">ここに映画の説明が入ります。</p>
+                        <p>⭐⭐⭐</p>
+                        <p class="mycomment">自分の一行レビューを書きます</p>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
     </div>
-  </body>
+</body>
+
 </html>
